<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

  <TextView
      android:id="@+id/text_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="100dp"
      android:layout_marginBottom="15dp"
      android:text="@string/login_text"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="24sp"
      tools:ignore="TextContrastCheck" />

  <EditText
      android:id="@+id/login_email"
      android:layout_width="330dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/text_login"
      android:layout_centerInParent="true"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"
      android:autofillHints="emailAddress"
      android:hint="@string/login_email"
      android:importantForAutofill="no"
      android:inputType="textEmailAddress"
      android:isScrollContainer="false"
      android:minHeight="48dp"
      android:textColor="@color/white"
      android:textColorHint="#FFFFFF"
      tools:ignore="TextContrastCheck" />

  <EditText
      android:id="@+id/login_password"
      android:layout_width="330dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/login_email"
      android:layout_centerInParent="true"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"
      android:autofillHints="password"
      android:hint="@string/login_password"
      android:importantForAutofill="no"
      android:inputType="textPassword"
      android:minHeight="48dp"
      android:textColor="@color/white"
      android:textColorHint="#FFFFFF"
      tools:ignore="TextContrastCheck" />

  <Button
      android:id="@+id/login"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/login_password"
      android:layout_centerInParent="true"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"
      android:text="@string/login_btn" />

  <TextView
      android:id="@+id/text_register"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/login"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"
      android:text="@string/login_new_user_btn"
      android:textAlignment="center"
      android:textColor="@color/white"
      tools:ignore="TextContrastCheck" />

  </RelativeLayout>