<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/text_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="15dp"
        android:text="@string/register_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_register"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="emailAddress"
        android:hint="@string/login_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:isScrollContainer="false"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="password"
        android:hint="@string/login_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/register"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/register_btn"/>

    <TextView
        android:id="@+id/text_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/register_login_btn"
        android:textAlignment="center"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />
</RelativeLayout>